[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Enemy/eyeBoss.png" type="Texture" id=1]
[ext_resource path="res://Assets/Shadows/Shadow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Hitbox-Hurtbox/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Hitbox-Hurtbox/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Global/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Enemy/EyeBoss.gd" type="Script" id=6]
[ext_resource path="res://Assets/Enemy/RoamController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Effects/BlinkEffect.shader" type="Shader" id=8]
[ext_resource path="res://Assets/Enemy/eyeBossA.png" type="Texture" id=9]
[ext_resource path="res://Assets/Effects/explosion.wav" type="AudioStream" id=10]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 8 )
shader_param/blinking = false

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/blinking = false

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Animation",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 21.474

[sub_resource type="CapsuleShape2D" id=11]
radius = 21.3595
height = 18.1836

[sub_resource type="CapsuleShape2D" id=12]
radius = 22.0842
height = 10.7188

[sub_resource type="Animation" id=13]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/blinking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/blinking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="EyeBoss" type="KinematicBody2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -19 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0.327621, -19.6574 )
frames = SubResource( 9 )
animation = "Animation"
frame = 5
playing = true

[node name="Shadow" type="Sprite" parent="."]
scale = Vector2( 4, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.405998, -20.2999 )
shape = SubResource( 10 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 30

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.935272, -19.6479 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.182281, -20.5073 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 13 )
anims/Stop = SubResource( 14 )

[node name="RoamController" parent="." instance=ExtResource( 7 )]
roam_range = 64

[node name="Timer" type="Timer" parent="."]

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="end_invincibility" from="Hurtbox" to="." method="_on_Hurtbox_end_invincibility"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
